css/base.css
html {
  --color-body: #686868;
  --color-main: #0970e5;
  --color-icons: rgb(163, 163, 163);
  --color-border: rgba(193, 193, 193, 0.705);
  --color-error: rgb(229, 112, 40);

  --linear-bg-1: linear-gradient(90deg, #06a7e7 0%, #3f4de3 80%);


  --bg-body-light: rgb(247, 247, 247);
  --bg-body-dark: rgb(241, 241, 241);

  --bg-button: #f9f9f9;
  --bg-banner: rgba(250, 250, 250, 0.866);
  --bg-button-2: #dfe2e9;
  --bg-footer: rgb(7, 14, 61);

  scroll-behavior: smooth;
  font-family: 'Montserrat', sans-serif;


}






.dark {
  --color-body: #ffffff;
  --color-main: #ffc800;
  --color-border: rgba(39, 39, 39, 0.119);
  --color-error: rgb(255, 132, 94);


  --linear-bg-1: #ffc800;


  --bg-body-light: rgb(68, 68, 68);
  --bg-body-dark: rgb(57, 57, 57);

  --bg-button: #141414;
  --bg-banner: #514f4fdd;
  --bg-button-2: #252525;
  --bg-footer: rgb(27, 21, 14);

  background-color: var(--bg-body-dark);

}


.loader{
  width: 100%;
  height: 100%;
  z-index: 10000;
  background: var(--bg-body-light)
}

.spinner {
  position: absolute;
  left: 50%;
  top: 50%;

  width: 120px;
  height: 120px;
  margin: -76px 0 0 -76px;
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #3498db;
  -webkit-animation: spin 1s linear infinite;
  animation: spin 1s linear infinite;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}



/* Works on Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--color-main) var(bg-body-dark);
}

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  -webkit-appearance: none;
}

*::-webkit-scrollbar {
  width: 6px;
}

*::-webkit-scrollbar-track {
  background: var(bg-body-dark);
}

*::-webkit-scrollbar-thumb {
  background-color: var(--color-main);
  border-radius: 20px;
  border: 1px solid var(bg-body-dark);
}





.headerPrincipal {
  display: none;
  background: var(--bg-body-light);
  opacity: 0.9998;
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 200;
  vertical-align: middle;
  text-align: center;
  align-items: center;



}

nav {
  width: 100%;
  justify-content: center;
  text-align: center;
}

.headerPrincipal .container {
  width: 100%;
  height: 100%;
  padding-top: 5px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  text-align: center;
  align-items: center;


}



.headerTitle {
  display: flex;
  flex-direction: column;
  font-family: 'Pacifico', cursive;
  background: var(--linear-bg-1);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-size: 1.6rem;
  -webkit-user-select: none;
}


.menu {
  margin-left: 10%;
  display: flex;
  flex-direction: column;

  padding: 1px;
  width: 80%;
  justify-content: center;
  text-align: center;


}

.menu a {
  font-size: 1.2rem;
  margin-bottom: 12px;
  display: flex;
  width: 100%;
  color: var(--color-body);
  border-radius: 9px;
  padding: 10px 0 10px 0;

  letter-spacing: 0.5px;
  flex-direction: column;
  justify-content: center;
  text-align: center;


  -webkit-user-select: none;
  text-decoration: none;



}


.headerPrincipal p {
  color: var(--color-body);
  display: flex;
  width: 100%;
  justify-content: center;
  text-align: center;

}


.headerPrincipal .active,
.headerPrincipal a:hover {
  background: var(--linear-bg-1);
  background: var(--linear-bg-1);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  transition: 0.1s ease-out;
  text-shadow: 2px 2px 2px rgb(69, 69, 69);

}



.headerPrincipal i {
  color: #d6d6d6;
  margin-right: 1.2rem;
}



.hide {
  display: none;


}



section:nth-child(2) {
  background-color: var(--bg-body-light);

}


section:nth-child(3) {
  background-color: var(--bg-body-dark);
}

section:nth-child(4) {
  background-color: var(--bg-body-light);
  min-height: 100%;
}

section:nth-child(5) {
  background-color: var(--bg-body-dark);

}

section:nth-child(6) {
  background-color: var(--bg-body-light);
  min-height: 100vh;
}




h1 {
  font-size: 2.6rem;
  background: var(--linear-bg-1);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-shadow: 0px 0px #00000000;
  font-family: 'Pacifico', cursive;
  line-height: 5rem;
}


h2 {
  font-size: 2rem;
  background: var(--linear-bg-1);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-shadow: 0px 0px #00000000;
  line-height: 3rem;

}




strong {
  color: var(--color-main);
  font-weight: 500;

}




a {
  text-decoration: none;
}













.draw {
  display: none;
}









.reveal {
  position: relative;
  opacity: 0;
}

.reveal.active {
  opacity: 1;
}


.active.fade-bottom {
  animation: fade-bottom 1s ease-in;
}


.active.fade-left {
  animation: fade-left 1s ease-in;
}


.active.fade-right {
  animation: fade-right 1s ease-in;
}









/* @media screen and (min-height: 738px) and (min-width: 872px){
  .skillsContainer,  .educationContainer{
    padding: 5% !important;
  } */























/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {
    opacity: .4
  }

  to {
    opacity: 1
  }
}



.draw-container {
  display: none;
}

.draw-legend {
  opacity: 0;
  margin-top: 3px;
}


.draw-legend a {
  background: var(--linear-bg-1);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-shadow: 0px 0px #00000000;
  font-weight: 900;
}

.draw-container:hover .draw-legend {
  opacity: 1 !important;
}

.draw-legend,
.draw-legend a {
  font-size: 13px !important;
}



















.fadeOut {
  transform: scale(0);
}

.hide {
  transform: scale(0);
}





footer {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  background: var(--bg-footer);
  color: #ffffff;
  height: 20vh;
  padding-top: 6%;
  padding-bottom: 3%;
  -webkit-user-select: none;

}

footer div,
footer p {
  display: flex;
  flex-direction: row;
  justify-content: center;

}



footer i {
  font-size: 30px;
  color: #ffffff;
  margin-right: 12px;
  margin-left: 12px;
}




footer .icon-section i:hover {
  transform: scale(1.1);
}




.copyright {
  color: var(--color-1);
  font-size: 0.9rem;
  font-weight: 100;
  margin: 20px;

}







@keyframes fade-bottom {
  0% {
    transform: translateY(50px);
    opacity: 0;
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}



@keyframes fade-left {
  0% {
    transform: translateX(-100px);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes fade-right {
  0% {
    transform: translateX(100px);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}


@media screen and (min-width: 822px) {

  nav {
    text-align: left;
    justify-content: left;
    width: auto;
  }

  .headerTitle {
    display: none;
  }



  h1 {
    line-height: 6rem;
  }

  .header-border {
    box-shadow: 0px 3px 6px -6px var(--color-2-body);
    -webkit-box-shadow: 0px 3px 6px -6px var(--color-2-body);
    -moz-box-shadow: 0px 3px 6px -6px var(--color-2-body);
  }



  .headerPrincipal .container {
    width: 100%;
    height: 100%;
    padding-top: 5px;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;


  }


  .headerPrincipal {
    border: 0;

    display: flex;
    width: 100%;
    max-width: 100%;
    height: 1vh;
    min-height: 40px;
    text-align: center;
    vertical-align: middle;
    justify-content: space-around;
    padding: 7px;




  }

  .headerPrincipal .active,
  .headerPrincipal a:hover {
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: 600;
    text-shadow: 0px 0px 0px rgba(69, 69, 69, 0);
  }


  .menu li,
  .menu a,
  .menu p {
    display: flex;
    flex-direction: column;
    text-align: center;
    vertical-align: middle;
    justify-content: space-around;

  }

  .menu {
    text-align: center;
    vertical-align: middle;
    justify-content: space-around;
    width: 700px;
    margin-right: 20px;
  }


  .menu a {
    font-size: 1.1rem;
    width: auto;

    margin: 0;


  }

  .headerPrincipal .container,
  .headerPrincipal .menu {
    flex-direction: row;

  }






}





@media screen and (max-width: 822px) and (max-height: 562px) {


  .menu a:not(.active) {
    display: none;
  }


  .settingsContainer,
  .closeMenuButton {
    margin: 10% !important
  }







}


@media screen and (min-width: 1022px) {
  .headerTitle {
    display: flex;
    font-size: 1.1rem;
  }
}

